--- a/ArticulosWeb/Site.Master
+++ b/ArticulosWeb/Site.Master
@@ -4,44 +4,40 @@
 
 <html lang="es">
 <head runat="server">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Mi aplicación ASP.NET</title>
+    <title><%: Page.Title %> - Artículos FloriPais</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
-    
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-
 </head>
 <body>
- 
 
     <form runat="server">
-     <nav class="navbar navbar-expand-lg navbar" style="background-color: #1F2A44;">
-  <a class="navbar-brand" href="/">Articulos</a>
-  
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active"> <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a> </li>
-      <li class="nav-item"> <a class="nav-link" href="CarritoDeCompras.aspx">Carrito de Compras</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="About">Acerca de</a> </li>
-        <li class="nav-item"> <a class="nav-link" href="Contact">Contacto</a> </li>
-           
-  </div>
-</nav>
+        <nav class="navbar navbar-expand-lg navbar mb-3 " style="background-color: #1F2A44;">
+            <a class="navbar-brand" href="/">Articulos</a>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a> </li>
+                    <li class="nav-item"><a class="nav-link" href="CarritoDeCompras.aspx">Carrito de Compras</a> </li>
+                    <li class="nav-item"><a class="nav-link" href="About">Acerca de</a> </li>
+                    <li class="nav-item"><a class="nav-link" href="Contact">Contacto</a> </li>
+            </div>
+        </nav>
 
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Artículos FloriPais</p>
             </footer>
         </div>
 
